--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -4,6 +4,10 @@
 	box-sizing: border-box;
 }
 
+*:focus {
+	outline: none;
+}
+
 html {
 	font-size: 62.5%;
 }
@@ -11,6 +15,10 @@ html {
 body {
 	font-family: 'Roboto', sans-serif;
 	font-weight: 400;
+}
+
+.inactive {
+	display: none;
 }
 
 .inputs__btn {
@@ -78,15 +86,16 @@ input {
 	right: 10px;
 }
 
-.phrase__container {
+.forgot__container {
 	width: 280px;
 	padding: 14px;
 }
 
-.phrase {
+.forgot {
 	font-size: 1.4rem;
 	font-weight: 300;
 	color: #575757;
+	text-decoration: none;
 }
 
 .inputs__btn {
